--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^3.0.0"
+    "@electron-toolkit/utils": "^3.0.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@tanstack/react-query": "^5.52.2",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "phosphor-react": "^1.4.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
