--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@tanstack/react-query": "^5.52.2",
+    "@tiptap/extension-document": "^2.6.6",
+    "@tiptap/extension-highlight": "^2.6.6",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/extension-typography": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "electron-router-dom": "^1.0.5",
@@ -37,6 +43,7 @@
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
